--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -29,9 +29,9 @@
         <a class="navbar-brand" href="#">PhotoApp</a>
         <div class="navbar-collapse collapse navbar-responsive-collapse">
           <ul class="nav navbar-nav">
-            <li><%= link_to "Link1", "/path1"  %></li>
-            <li><%= link_to "Link2", "/path2"  %></li>
-            <li><%= link_to "Link3", "/path3"  %></li>
+            <li><%= link_to "Welcome", root_path  %></li>
+            <li><%= link_to "Photos", images_path  %></li>
+            <li><%= link_to "Edit User", edit_user_registration_path  %></li>
           </ul>
 	  <ul class="nav navbar-right col-md-4">
             <% if current_user %>
